--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 restaurantv2=\${restaurantv2}
 server.port=80
+management.prometheus.metrics.export.enabled=true
+management.endpoints.web.exposure.include=health,info,prometheus
