--- a/curl-pod.yaml
+++ b/curl-pod.yaml
@@ -1,18 +1,32 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: curl-pod
+  name: curl
+  labels:
+    app: curl
 spec:
-  containers:
-    - name: curl-container
-      image: curlimages/curl:latest  # Use the official curl image
-      command:
-        - /bin/sh
-        - -c
-        - |
-          while true; do
-            curl --location 'http://order.order/order/v1' \
-            --header 'Content-Type: application/json' \
-            --data '{}'
-            sleep 1  # Adjust the sleep interval as needed
-          done  # Keep the container running
+  replicas: 15
+  selector:
+    matchLabels:
+      app: curl
+  template:
+    metadata:
+      name: curl
+      labels:
+        app: curl
+    spec:
+      containers:
+        - name: curl
+          image: curlimages/curl:latest
+          imagePullPolicy: IfNotPresent
+          command:
+            - /bin/sh
+            - -c
+            - |
+              while true; do
+                curl --location 'http://order.order/order/v1' \
+                --header 'Content-Type: application/json' \
+                --data '{}'
+                sleep 1  # Adjust the sleep interval as needed
+              done  # Keep the container running
+      restartPolicy: Always
