--- a/k8s.yml
+++ b/k8s.yml
@@ -11,6 +11,7 @@ metadata:
   labels:
     app: order
     color: blue
+    version: blue
 spec:
   replicas: 1
   selector:
@@ -22,6 +23,7 @@ spec:
       labels:
         app: order
         color: blue
+        version: blue
     spec:
       containers:
         - name: order
@@ -41,6 +43,7 @@ metadata:
   labels:
     app: order
     color: green
+    version: green
 spec:
   replicas: 1
   selector:
@@ -52,6 +55,7 @@ spec:
       labels:
         app: order
         color: green
+        version: green
     spec:
       containers:
         - name: order
@@ -80,7 +84,7 @@ spec:
       port: 443
       targetPort: 443
       name: https
-  type: ClusterIP
+  type: NodePort
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -96,4 +100,27 @@ metadata:
   namespace: order
   name: order-green
 data:
-  restaurantv2: "http://k8s-restaura-restaura-13c720b2f0-881967216.us-east-1.elb.amazonaws.com/"
+  restaurantv2: "http://k8s-restaura-restaura-13c720b2f0-264929128.us-east-1.elb.amazonaws.com"
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: order
+  namespace: order
+  annotations:
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
+    alb.ingress.kubernetes.io/scheme: internet-facing
+  labels:
+    app: order
+spec:
+  rules:
+    - http:
+        paths:
+          - path: /*
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: order
+                port:
+                  number: 80
