--- a/curl-pod.yaml
+++ b/curl-pod.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: curl
 spec:
-  replicas: 15
+  replicas: 2
   selector:
     matchLabels:
       app: curl
@@ -14,6 +14,9 @@ spec:
       name: curl
       labels:
         app: curl
+      annotations:
+        prometheus.io/port: "80"
+        prometheus.io/path: /actuator/prometheus
     spec:
       containers:
         - name: curl
