--- a/k8s.yml
+++ b/k8s.yml
@@ -12,6 +12,9 @@ metadata:
     app: order
     color: blue
     version: blue
+  annotations:
+    prometheus.io/port: "80"
+    prometheus.io/path: /actuator/prometheus
 spec:
   replicas: 1
   selector:
@@ -24,6 +27,9 @@ spec:
         app: order
         color: blue
         version: blue
+      annotations:
+        prometheus.io/port: "80"
+        prometheus.io/path: /actuator/prometheus
     spec:
       containers:
         - name: order
@@ -56,6 +62,9 @@ spec:
         app: order
         color: green
         version: green
+      annotations:
+        prometheus.io/port: "80"
+        prometheus.io/path: /actuator/prometheus
     spec:
       containers:
         - name: order
